# agentcell

./: README.md  package.json  tsconfig.json
src/: App.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: particles.tsx  progress.tsx
src/context/: navigationContext.tsx
src/lib/: pages.ts
src/pages/setup-page/: setup-page.tsx
src/render/: render.tsx
